methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:29: error: type mismatch;
 found   : Unit
 required: Boolean
    colonne()
           ^